@@ -1,3 +1,8 @@
+2007-05-25  The Carcass  <sanelz@stigmata>
+
+	* Added set in Config to accept const char* since it will
+	generate wrong code and redirect to set(...,...,bool) member. Uh!
+
 2007-05-25  Sanel <karijes@users.sourceforge.net>
 
 	* Added few ESTRLOC to IconTheme
